@@ -1,6 +1,6 @@
 
 // plus4emu -- portable Commodore Plus/4 emulator
-// Copyright (C) 2003-2016 Istvan Varga <istvanv@users.sourceforge.net>
+// Copyright (C) 2003-2017 Istvan Varga <istvanv@users.sourceforge.net>
 // https://github.com/istvan-v/plus4emu/
 //
 // This program is free software; you can redistribute it and/or modify
@@ -24,49 +24,39 @@
 
 namespace Plus4Emu {
 
-  BreakPointList::BreakPointList(const std::string& lst)
+  void BreakPointList::parseBreakPoint(std::map< uint32_t, uint8_t >& bpList,
+                                       const std::string& s)
   {
-    std::vector<std::string>  tokens;
-    std::string curToken = "";
-    char        ch = '\0';
-    bool        wasSpace = true;
+    size_t    j;
+    uint16_t  addr = 0, lastAddr;
+    bool      isIgnore = false;
+    bool      isVideo = false;
+    int       rwxMode = 0;
+    int       priority = -1;
+    uint32_t  n = 0;
 
-    for (size_t i = 0; i < lst.length(); i++) {
-      ch = lst[i];
-      bool  isSpace = (ch == ' ' || ch == '\t' || ch == '\r' || ch == '\n');
-      if (isSpace && wasSpace)
-        continue;
-      if (isSpace) {
-        tokens.push_back(curToken);
-        curToken = "";
-      }
+    for (j = 0; j < s.length(); j++) {
+      char    c = s[j];
+      if (c >= '0' && c <= '9')
+        n = (n << 4) + uint32_t(c - '0');
+      else if (c >= 'A' && c <= 'F')
+        n = (n << 4) + uint32_t(c - 'A') + 10;
+      else if (c >= 'a' && c <= 'f')
+        n = (n << 4) + uint32_t(c - 'a') + 10;
       else
-        curToken += ch;
-      wasSpace = isSpace;
+        break;
     }
-    if (!wasSpace)
-      tokens.push_back(curToken);
-
-    // b0 = R
-    // b1 = W
-    // b2 = X
-    // b3 = I
-    // b4..b5 = priority
-    std::map< uint32_t, uint8_t > bpList;
-
-    for (size_t i = 0; i < tokens.size(); i++) {
-      size_t    j;
-      uint16_t  addr = 0, lastAddr;
-      bool      isIgnore = false;
-      bool      isVideo = false;
-      int       rwxMode = 0;
-      int       priority = -1;
-      uint32_t  n;
-
-      curToken = tokens[i];
+    if (j != 4)
+      throw Exception("syntax error in breakpoint list");
+    if (j < s.length() && s[j] == ':') {
+      if (n >= 0x0200)
+        throw Exception("syntax error in breakpoint list");
+      j++;
+      isVideo = true; // break on video position
+      addr = uint16_t(n << 7);
       n = 0;
-      for (j = 0; j < curToken.length(); j++) {
-        char    c = curToken[j];
+      for ( ; j < s.length(); j++) {
+        char    c = s[j];
         if (c >= '0' && c <= '9')
           n = (n << 4) + uint32_t(c - '0');
         else if (c >= 'A' && c <= 'F')
@@ -76,125 +66,138 @@ namespace Plus4Emu {
         else
           break;
       }
-      if (j != 4)
+      if (j != 7)
         throw Exception("syntax error in breakpoint list");
-      if (j < curToken.length() && curToken[j] == ':') {
-        if (n >= 0x0200)
-          throw Exception("syntax error in breakpoint list");
-        j++;
-        isVideo = true; // break on video position
-        addr = uint16_t(n << 7);
-        n = 0;
-        for ( ; j < curToken.length(); j++) {
-          char    c = curToken[j];
-          if (c >= '0' && c <= '9')
-            n = (n << 4) + uint32_t(c - '0');
-          else if (c >= 'A' && c <= 'F')
-            n = (n << 4) + uint32_t(c - 'A') + 10;
-          else if (c >= 'a' && c <= 'f')
-            n = (n << 4) + uint32_t(c - 'a') + 10;
-          else
-            break;
-        }
-        if (j != 7)
-          throw Exception("syntax error in breakpoint list");
-        addr |= uint16_t((n & 0xFEU) >> 1);
-      }
-      else
-        addr = uint16_t(n);
-      lastAddr = addr;
-      if (j < curToken.length() && curToken[j] == '-') {
-        size_t  len = 0;
-        n = 0;
-        j++;
-        for ( ; j < curToken.length(); j++, len++) {
-          char    c = curToken[j];
-          if (c >= '0' && c <= '9')
-            n = (n << 4) + uint32_t(c - '0');
-          else if (c >= 'A' && c <= 'F')
-            n = (n << 4) + uint32_t(c - 'A') + 10;
-          else if (c >= 'a' && c <= 'f')
-            n = (n << 4) + uint32_t(c - 'a') + 10;
-          else
-            break;
-        }
-        if (isVideo) {
-          if (len != 2 || n < ((uint32_t(addr) & 0x7FU) << 1))
-            throw Exception("syntax error in breakpoint list");
-          lastAddr = uint16_t((addr & 0xFF80) | ((n & 0xFE) >> 1));
-        }
-        else {
-          if (len != 4 || n < addr)
-            throw Exception("syntax error in breakpoint list");
-          lastAddr = n;
-        }
-      }
-      for ( ; j < curToken.length(); j++) {
-        switch (curToken[j]) {
-        case 'r':
-          rwxMode |= 1;
-          break;
-        case 'w':
-          rwxMode |= 2;
-          break;
-        case 'x':
-          rwxMode |= 4;
-          break;
-        case 'i':
-          if (isVideo)
-            throw Exception("ignore flag is not allowed for video breakpoints");
-          isIgnore = true;
-          break;
-        case 'p':
-          if (++j >= curToken.length())
-            throw Exception("syntax error in breakpoint list");
-          if (curToken[j] < '0' || curToken[j] > '3')
-            throw Exception("syntax error in breakpoint list");
-          priority = int(curToken[j] - '0');
-          break;
-        default:
-          throw Exception("syntax error in breakpoint list");
-        }
-      }
-      if (isVideo && rwxMode != 0) {
-        throw Exception("read/write/execute flags are not allowed "
-                        "for video breakpoints");
-      }
-      if (isIgnore && (rwxMode != 0 || priority >= 0)) {
-        throw Exception("read/write/execute flags and priority "
-                        "are not allowed for ignore breakpoints");
-      }
-      while (true) {
-        uint32_t    addr_ = uint32_t(addr);
-        if (isVideo)    // use separate address space for video breakpoints
-          addr_ |= uint32_t(0x80000000UL);
-        uint8_t bpFlags = uint8_t(rwxMode);
-        if (isIgnore)
-          bpFlags = bpFlags | 0x08;
-        else if (priority >= 0)
-          bpFlags = bpFlags | uint8_t(priority << 4);
+      addr |= uint16_t((n & 0xFEU) >> 1);
+    }
+    else
+      addr = uint16_t(n);
+    lastAddr = addr;
+    if (j < s.length() && s[j] == '-') {
+      size_t  len = 0;
+      n = 0;
+      j++;
+      for ( ; j < s.length(); j++, len++) {
+        char    c = s[j];
+        if (c >= '0' && c <= '9')
+          n = (n << 4) + uint32_t(c - '0');
+        else if (c >= 'A' && c <= 'F')
+          n = (n << 4) + uint32_t(c - 'A') + 10;
+        else if (c >= 'a' && c <= 'f')
+          n = (n << 4) + uint32_t(c - 'a') + 10;
         else
-          bpFlags = bpFlags | 0x20;     // default priority = 2
-        if (!(int(isIgnore | isVideo) | rwxMode))
-          bpFlags = bpFlags | 0x07;     // default to break on any memory access
-        std::map< uint32_t, uint8_t >::iterator i_ = bpList.find(addr_);
-        if (i_ == bpList.end()) {
-          // add new breakpoint
-          bpList.insert(std::pair< uint32_t, uint8_t >(addr_, bpFlags));
-        }
-        else {
-          // update existing breakpoint
-          uint8_t bp = (*i_).second;
-          bp = bp | (bpFlags & 0x0F);
-          bpFlags = bpFlags | (bp & 0x0F);
-          bp = (bp > bpFlags ? bp : bpFlags);
-          (*i_).second = bp;
-        }
-        if (addr == lastAddr)
           break;
-        addr++;
+      }
+      if (isVideo) {
+        if (len != 2 || n < ((uint32_t(addr) & 0x7FU) << 1))
+          throw Exception("syntax error in breakpoint list");
+        lastAddr = uint16_t((addr & 0xFF80) | ((n & 0xFE) >> 1));
+      }
+      else {
+        if (len != 4 || n < addr)
+          throw Exception("syntax error in breakpoint list");
+        lastAddr = n;
       }
     }
+    for ( ; j < s.length(); j++) {
+      switch (s[j]) {
+      case 'r':
+        rwxMode |= 1;
+        break;
+      case 'w':
+        rwxMode |= 2;
+        break;
+      case 'x':
+        rwxMode |= 4;
+        break;
+      case 'i':
+        if (isVideo)
+          throw Exception("ignore flag is not allowed for video breakpoints");
+        isIgnore = true;
+        break;
+      case 'p':
+        if (++j >= s.length())
+          throw Exception("syntax error in breakpoint list");
+        if (s[j] < '0' || s[j] > '3')
+          throw Exception("syntax error in breakpoint list");
+        priority = int(s[j] - '0');
+        break;
+      default:
+        throw Exception("syntax error in breakpoint list");
+      }
+    }
+    if (isVideo && rwxMode != 0) {
+      throw Exception("read/write/execute flags are not allowed "
+                      "for video breakpoints");
+    }
+    if (isIgnore && (rwxMode != 0 || priority >= 0)) {
+      throw Exception("read/write/execute flags and priority "
+                      "are not allowed for ignore breakpoints");
+    }
+    while (true) {
+      uint32_t    addr_ = uint32_t(addr);
+      if (isVideo)    // use separate address space for video breakpoints
+        addr_ |= uint32_t(0x80000000UL);
+      uint8_t bpFlags = uint8_t(rwxMode);
+      if (isIgnore)
+        bpFlags = bpFlags | 0x08;
+      else if (priority >= 0)
+        bpFlags = bpFlags | uint8_t(priority << 4);
+      else
+        bpFlags = bpFlags | 0x20;     // default priority = 2
+      if (!(int(isIgnore | isVideo) | rwxMode))
+        bpFlags = bpFlags | 0x07;     // default to break on any memory access
+      std::map< uint32_t, uint8_t >::iterator i_ = bpList.find(addr_);
+      if (i_ == bpList.end()) {
+        // add new breakpoint
+        bpList.insert(std::pair< uint32_t, uint8_t >(addr_, bpFlags));
+      }
+      else {
+        // update existing breakpoint
+        uint8_t bp = (*i_).second;
+        bp = bp | (bpFlags & 0x0F);
+        bpFlags = bpFlags | (bp & 0x0F);
+        bp = (bp > bpFlags ? bp : bpFlags);
+        (*i_).second = bp;
+      }
+      if (addr == lastAddr)
+        break;
+      addr++;
+    }
+  }
+
+  BreakPointList::BreakPointList(const std::string& lst)
+  {
+    // b0 = R
+    // b1 = W
+    // b2 = X
+    // b3 = I
+    // b4..b5 = priority
+    std::map< uint32_t, uint8_t > bpList;
+    std::string curToken = "";
+    char        ch = '\0';
+    bool        wasSpace = true;
+
+    for (size_t i = 0; i < lst.length(); i++) {
+      ch = lst[i];
+      if (ch == '#' || ch == ';') {
+        ch = '\n';
+        while (++i < lst.length() && lst[i] != '\r' && lst[i] != '\n')
+          ;
+      }
+      bool  isSpace = (ch == ' ' || ch == '\t' || ch == '\r' || ch == '\n');
+      if (isSpace && wasSpace)
+        continue;
+      if (isSpace) {
+        parseBreakPoint(bpList, curToken);
+        curToken = "";
+      }
+      else
+        curToken += ch;
+      wasSpace = isSpace;
+    }
+    if (!wasSpace)
+      parseBreakPoint(bpList, curToken);
 
     std::map< uint32_t, uint8_t >::iterator i_;
     for (i_ = bpList.begin(); i_ != bpList.end(); i_++) {
