@@ -1,6 +1,6 @@
 
 // plus4emu -- portable Commodore Plus/4 emulator
-// Copyright (C) 2003-2016 Istvan Varga <istvanv@users.sourceforge.net>
+// Copyright (C) 2003-2017 Istvan Varga <istvanv@users.sourceforge.net>
 // https://github.com/istvan-v/plus4emu/
 //
 // This program is free software; you can redistribute it and/or modify
@@ -83,6 +83,9 @@ namespace Plus4Emu {
   class BreakPointList {
    private:
     std::vector<BreakPoint> lst_;
+    // --------
+    void parseBreakPoint(std::map< uint32_t, uint8_t >& bpList,
+                         const std::string& s);
    public:
     BreakPointList()
     {
