@@ -5,6 +5,8 @@ Changes in version 1.2.10.2
   * minor fix in 1551 emulation
   * fixed video breakpoints not working when the priority threshold is
     not zero
+  * added support for comments (beginning with ; or #) in the breakpoint
+    list
 
 Changes in version 1.2.10.1
 ---------------------------
